@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.852 2007-10-11 16:26:48 castaglia Exp $
+$Id: NEWS,v 1.853 2007-10-11 16:39:51 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -34,6 +34,9 @@ CVS
 - Bug 2386 - Controls should use kernel-enforced credentials where possible.
 - Added mod_dynmasq contrib module.  See doc/contrib/mod_dynmasq.html for
   more information.
+- Bug 2968 - Ability to allow protection on control channel, but reject
+  protection on data channel.  See doc/contrib/mod_tls.html#TLSRequired
+  for details.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
